# retail-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
data/drops/: amazon_fulfilled_shipments.tsv  mercadolibre_orders.json  shopify_orders.json  tiendanube_ventas.xlsx
docker/: entrypoint.sh
docs/: SCHEDULING.md
scripts/: init_db.py  run_all_extractors.py  run_all_normalizers.py  run_daily.py  run_daily.sh  run_extractor.py  run_loader.py  run_normalizer.py  run_simulators.py  seed_dim_date.py  seed_dim_product.py  seed_fx_rates.py  seed_sku_mapping.py  test_sku_mapping.py
simulators/: _catalog.py  _dirty.py  gen_amazon.py  gen_mercadolibre.py  gen_pos.py  gen_shopify.py  gen_tiendanube.py
sql/: 01_init_schemas.sql  02_staging_schema.sql  03_reference_data.sql  04_sku_mapping.sql  05_core_schema.sql  06_views_powerbi.sql
src/retail_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/retail_pipeline/extractors/: amazon.py  base.py  mercadolibre.py  pos.py  shopify.py  tiendanube.py
src/retail_pipeline/loaders/: fact_sales.py
src/retail_pipeline/orchestration/: run_daily.py
src/retail_pipeline/transformers/: base_normalizer.py  cleaning.py  normalize_amazon.py  normalize_mercadolibre.py  normalize_pos.py  normalize_shopify.py  normalize_tiendanube.py  sku_mapper.py  validators.py
src/retail_pipeline/utils/: config.py  db.py  logging_setup.py
tests/: conftest.py  test_cleaning.py  test_sku_mapper_integration.py  test_validators.py
