[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "retail-pipeline"
version = "0.1.0"
description = "Unified sales reporting pipeline for multi-channel retail"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.2.3",
    "numpy==2.1.3",
    "sqlalchemy==2.0.36",
    "psycopg[binary]==3.2.3",
    "openpyxl==3.1.5",
    "pydantic==2.9.2",
    "python-dotenv==1.0.1",
    "requests==2.32.3",
    "faker==30.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "ruff==0.7.4",
    "ipython==8.29.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
